--- a/app/views/mib_browser/snmp_request.js.erb
+++ b/app/views/mib_browser/snmp_request.js.erb
@@ -1,8 +1,6 @@
 <% if @snmp_response.is_a?(Array) %>
   <% time = Time.now.to_i %>
-  $("#results").prepend("<h2>Table Walk Results - <%= params[:host] %></h2><div id='results_<%= time %>'></div>");
-  
-  $("#results_<%= time %>").append("<%= raw @buffer %>");
+  $("#results").prepend("<h2>Table Walk Results - <%= params[:host] %></h2><br /><%= raw @buffer %><hr />");
   
 <% else %>
   $("#results").prepend("<h2>Results</h2><%= params[:host] %> - <%= params[:oid] %> (<%= @snmp_response.varbind_list.first.name %>): <%= @snmp_response.varbind_list.first.value %>");
